--- a/index.html
+++ b/index.html
@@ -18,86 +18,60 @@
       <section class="flex-container row">
 
           <div class="item">
-            <img class="img-1">
+          <a href="http://www.permanentpresseditions.com/products/illusion-2-0"><img class="img-1" title="Illusion 2.0" alt="Illusion 2.0"></a>
           </div>
 
           <div class="item">
-            <img class="img-2">
+          <a href="http://www.permanentpresseditions.com/collections/edition-no-3"><img class="img-2" title="Edition No. 3, Network, is a study in ethereal shapes. Delicate sculptural forms become dynamic in their layered tonality." alt="Edition No. 3 Collection"></a>
           </div>
 
           <div class="item-wide">
-            <img class="img-3">
-          </div>
-
-<!--           <div class="item">
-            <img class="img-4">
-          </div> -->
-
-          <div class="item">
-            <img class="img-5">
+          <a href="http://www.permanentpresseditions.com/products/illusion-4-0"><img class="img-3" title="Illusion 4.1" alt="Illusion 4.1"></a>
           </div>
 
           <div class="item">
-            <img class="img-6">
+          <a href="http://www.permanentpresseditions.com/products/illusion-4-3"><img class="img-5" title="Illusion 4.3" alt="Illusion 4.3"></a>
           </div>
 
           <div class="item">
-            <img class="img-7">
+          <a href="http://www.permanentpresseditions.com/products/illusion-10-0"><img class="img-6" title="Illusion 10.0" alt="Illusion 10.0"></a>
           </div>
 
           <div class="item">
-            <img class="img-8">
+          <a href="http://www.permanentpresseditions.com/collections/edition-no-4"><img class="img-7" title="In Edition No. 4, Case Studies, playful portraits hint at the character, quirks, and travels of different individuals." alt="Edition No. 4 Collection"></a>
           </div>
 
           <div class="item">
-            <img class="img-9">
+          <a href="http://www.permanentpresseditions.com/products/illusion-1-0"><img class="img-8" title="Illusion 1.0" alt="Illusion 1.0"></a>
           </div>
 
           <div class="item">
-            <img class="img-10">
+          <a href="http://www.permanentpresseditions.com/products/savannah"><img class="img-9" title="Savannah" alt="Savannah"></a>
           </div>
 
           <div class="item">
-            <img class="img-11">
+          <a href="http://www.permanentpresseditions.com/products/baltimore"><img class="img-10" title="Baltimore" alt="Baltimore"></a>
           </div>
 
           <div class="item">
-            <img class="img-12">
+          <a href="http://www.permanentpresseditions.com/products/duluth"><img class="img-11" title="Duluth" alt="Duluth"></a>
+          </div>
+
+          <div class="item">
+          <a href="http://www.permanentpresseditions.com/products/newport"><img class="img-12" title="Newport" alt="Newport"></a>
           </div>
 
           <div class="item-wide">
-            <img class="img-14">
+          <a href="http://www.permanentpresseditions.com/pages/mix-match"><img class="img-14" title="Mix & Match" alt="Mix & Match"></a>
           </div>
 
           <div class="item">
-            <img class="img-13">
+          <a href="http://www.permanentpresseditions.com/products/newport"><img class="img-13" title="Newport" alt="Newport"></a>
           </div>
 
           <div class="item">
-            <img class="img-16">
+          <a href="http://www.permanentpresseditions.com/products/womans-bathing-suit"><img class="img-16" title="34C" alt="34C"></a>
           </div>
-
-<!--           <div class="item">
-            <img class="img-15">
-          </div> -->
-
-
-
-<!--           <div class="item">
-            <img class="img-17">
-          </div>
-
-          <div class="item">
-            <img class="img-18">
-          </div>
-
-          <div class="item">
-            <img class="img-19">
-          </div>
-
-          <div class="item">
-            <img class="img-20">
-          </div> -->
 
       </section>
 
