swapped in link for columbus product

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
 
           <div class="item">
-          <a href="http://www.permanentpresseditions.com/products/newport"><img class="img-12"></a>
+          <a href="http://www.permanentpresseditions.com/products/columbus"><img class="img-12"></a>
           </div>
 
           <div class="item-wide">
