--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-      <section class="flex-container row">
+      <section class="flex-container flex-row">
 
           <div class="item">
           <a href="http://www.permanentpresseditions.com/products/illusion-2-0"><img class="img-1"></a>
